--- a/application/pom.xml
+++ b/application/pom.xml
@@ -62,6 +62,7 @@
             <groupId>com.atlassian.fugue</groupId>
             <artifactId>fugue</artifactId>
             <version>2.6.1</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
