use public atlassian repo

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -14,16 +14,7 @@
     <repositories>
         <repository>
             <id>atlassian-public</id>
-            <url>https://maven.atlassian.com/repository/public</url>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-                <checksumPolicy>warn</checksumPolicy>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-                <checksumPolicy>warn</checksumPolicy>
-            </releases>
+            <url>https://packages.atlassian.com/maven/repository/public</url>
         </repository>
     </repositories>
 
